--- a/app/elements/app-list/app-list.html
+++ b/app/elements/app-list/app-list.html
@@ -265,7 +265,12 @@
             <div class="col-md-12">
               <dailycollection-dashboard></dailycollection-dashboard>
             </div>
-          </section>       
+          </section>  
+          <section data-category="latefee-card">
+            <div class="col-md-12">
+              <latefee-card></latefee-card>
+            </div>
+          </section>      
           </iron-pages>
           </div>
           </div>
