--- a/app/elements/appregfee-service/appregfee-service.html
+++ b/app/elements/appregfee-service/appregfee-service.html
@@ -523,6 +523,7 @@
         document.querySelector('custompattern-fee-card').autocompletearr(e.detail.response.returnval);
         document.querySelector('attachdiscount-card').autocompletearr(e.detail.response.returnval);
         document.querySelector('adhoc-discount').autocompletearr(e.detail.response.returnval);
+        document.querySelector('latefee-card').autocompletearr(e.detail.response.returnval);
       }
     });
   })();
