--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -256,3 +256,5 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="update-preapps/update-preapps.html">
 <link rel="import" href="detailed-feedue-report/detailed-feedue-report.html">
 <link rel="import" href="dailycollection-dashboard/dailycollection-dashboard.html">
+<link rel="import" href="latefee-card/latefee-card.html">
+<link rel="import" href="latefee-itemcard/latefee-itemcard.html">
