--- a/app/elements/custom-fee-service/custom-fee-service.html
+++ b/app/elements/custom-fee-service/custom-fee-service.html
@@ -753,7 +753,7 @@
                 chequeno++;
                 }
             }
-            else if(paymentarr[i].mode_of_payment=="Transfer"){
+            else if(paymentarr[i].mode_of_payment=="Transfer"||paymentarr[i].mode_of_payment=="Card Swipe"){
                 transfertotal=parseFloat(parseFloat(paymentarr[i].installment_amount)+parseFloat(transfertotal)).toFixed(2);
                 transferparticular.push({"slno":transferno,"installment":paymentarr[i].installment_type,"feetype":paymentarr[i].fees,"bankname":paymentarr[i].bank_name,"referenceno":paymentarr[i].reference_no,"receiveddate":paymentarr[i].received_date,"installmentamount":paymentarr[i].installment_amount});
                 transferno++;
@@ -887,7 +887,7 @@
                 chequecnt++;
                 }
             }
-            if(paymentarr[i].mode_of_payment=="Transfer"){
+            if(paymentarr[i].mode_of_payment=="Transfer"||paymentarr[i].mode_of_payment=="Card Swipe"){
                 var obj={"schoolid":"","academicyear":"","admissionno":"","studentname":"","grade":"","installment":"","paiddate":"","receiptno":"","receipttype":"","hidereceipt":"","hideack":"","chequeview":"","transferview":"","paymentarr":""};
                 obj.modeofpayment=paymentarr[i].mode_of_payment;
                 obj.schoolid=paymentarr[i].school_id;
