--- a/app/elements/fees-card/fees-card.html
+++ b/app/elements/fees-card/fees-card.html
@@ -541,8 +541,10 @@
         this.$.feeservice.callInsertCashfeesService(installment[i],installment.length);
       if(installment[i].paymenttype=="Cheque")
         this.$.feeservice.callInsertChequefeesService(installment[i],installment.length);
-      if(installment[i].paymenttype=="Transfer")
+      if(installment[i].paymenttype=="Transfer"||installment[i].paymenttype=="Card Swipe"){
+        // alert('coming...');
         this.$.feeservice.callInsertTransferfeesService(installment[i],installment.length);
+      }
       if(installment[i].paymenttype=="Third Party")
         this.$.feeservice.callInsertThirdpartyfeesService(installment[i],installment.length);
       }
