--- a/app/elements/installment-card/installment-card.html
+++ b/app/elements/installment-card/installment-card.html
@@ -91,8 +91,10 @@
           <paper-menu class="dropdown-content" id="installmentid" on-iron-select="FnPaymentMode" valueattr="value" >
             <paper-item value="Cheque" id="{{installment}}">Cheque</paper-item>
             <paper-item value="Cash" id="{{installment}}">Cash</paper-item>
+            <paper-item value="Card Swipe" id="{{installment}}">Card Swipe</paper-item>
             <paper-item value="Transfer" id="{{installment}}">Transfer</paper-item>
             <paper-item value="Third Party" id="{{installment}}">Third Party</paper-item>
+
           </paper-menu>
     </paper-dropdown-menu>  
 
@@ -257,7 +259,7 @@
           this.hiddeninputtflag=true;         
           this.$.chequeinfo.toggle();                               
         }
-        if(paymenttype=="Transfer"){ 
+        if(paymenttype=="Transfer"||paymenttype=="Card Swipe"){ 
           this.hiddenflag=true;
           if(this.flag=1)
           this.hiddeninputtflag=true;                  
@@ -539,7 +541,7 @@
            
             this.FnPrepareInstallment(obj);                                 
         }
-        if(paymenttype=="Transfer"){ 
+        if(paymenttype=="Transfer"||paymenttype=="Card Swipe"){ 
           this.hiddenflag=false;
           if(this.flag=1)
           this.hiddeninputtflag=true;                  
