--- a/app/elements/prospectousfee-card/prospectousfee-card.html
+++ b/app/elements/prospectousfee-card/prospectousfee-card.html
@@ -287,7 +287,7 @@
         this.$.feeservice.callInsertCashfeesService(installment[i],installment.length);
       if(installment[i].paymenttype=="Cheque")
         this.$.feeservice.callInsertChequefeesService(installment[i],installment.length);
-      if(installment[i].paymenttype=="Transfer")
+      if(installment[i].paymenttype=="Transfer"||installment[i].paymenttype=="Card Swipe")
         this.$.feeservice.callInsertTransferfeesService(installment[i],installment.length);
       }
       installment=[];
