--- a/app/elements/app-list/app-list.html
+++ b/app/elements/app-list/app-list.html
@@ -270,7 +270,12 @@
             <div class="col-md-12">
               <latefee-card></latefee-card>
             </div>
-          </section>      
+          </section>  
+          <section data-category="defaulter-update">
+            <div class="col-md-12">
+              <defaulter-update></defaulter-update>
+            </div>
+          </section>     
           </iron-pages>
           </div>
           </div>
