--- a/app/elements/appregfee-service/appregfee-service.html
+++ b/app/elements/appregfee-service/appregfee-service.html
@@ -524,6 +524,7 @@
         document.querySelector('attachdiscount-card').autocompletearr(e.detail.response.returnval);
         document.querySelector('adhoc-discount').autocompletearr(e.detail.response.returnval);
         document.querySelector('latefee-card').autocompletearr(e.detail.response.returnval);
+        document.querySelector('defaulter-update').autocompletearr(e.detail.response.returnval);
       }
     });
   })();
