--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -258,3 +258,5 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="dailycollection-dashboard/dailycollection-dashboard.html">
 <link rel="import" href="latefee-card/latefee-card.html">
 <link rel="import" href="latefee-itemcard/latefee-itemcard.html">
+<link rel="import" href="defaulter-update/defaulter-update.html">
+<link rel="import" href="defaulter-update-itemcard/defaulter-update-itemcard.html">
