--- a/app/elements/processing-service/processing-service.html
+++ b/app/elements/processing-service/processing-service.html
@@ -214,6 +214,17 @@
         on-response="updatelatefeeResponse"
         debounce-duration="300"
         >
+        
+        <iron-ajax
+        method="post"
+        id="updatedefaulterajax"
+        url="{{updatedefaulterurl}}"
+        params="{{updatedefaulterparam}}"
+        handle-as="json"
+        content-type="application/json"
+        on-response="updatedefaulterResponse"
+        debounce-duration="300"
+        >
   </template>
   <script>
   (function() {
@@ -1159,6 +1170,10 @@
         document.querySelector('latefee-card').studentname=arr[0].student_name;
         document.querySelector('latefee-card').grade=arr[0].class_for_admission;
         document.querySelector('latefee-card').Fnhidelatefeecard();
+        document.querySelector('defaulter-update').admissionno=arr[0].admission_no;
+        document.querySelector('defaulter-update').studentname=arr[0].student_name;
+        document.querySelector('defaulter-update').grade=arr[0].class_for_admission;
+        document.querySelector('defaulter-update').Fnhidediscountmapcard();
       },
       attachdiscountService:function(admissionno,discounttypeid){
         this.attachdiscounturl=sessionStorage.getItem("addrinfo")+"/attachdiscount-service";
@@ -1207,6 +1222,20 @@
         alert(e.detail.response.returnval);
         document.querySelector('latefee-card').FnRefresh();
         document.querySelector('latefee-itemcard').FnRefresh();
+      },
+      updatedefaulterService:function(admissionno){
+        this.updatedefaulterurl=sessionStorage.getItem("addrinfo")+"/updatedefaulter-service";
+        var obj={"schoolid":""};
+        obj.schoolid=localStorage.getItem("schoolid");
+        // alert(admissionno);
+        obj.admissionno=admissionno;
+        this.updatedefaulterparam=obj;
+        this.$.updatedefaulterajax.generateRequest();
+      },
+      updatedefaulterResponse:function(e){
+        alert(e.detail.response.returnval);
+        document.querySelector('defaulter-update').FnRefresh();
+        document.querySelector('defaulter-update-itemcard').FnRefresh();
       }
     });
   })();
