hide due report

--- a/app/elements/navigation-bar/navigation-bar.html
+++ b/app/elements/navigation-bar/navigation-bar.html
@@ -408,7 +408,7 @@
            </ul>
             </li>
             <li id="detailduereport">
-            <a href="" aria-hidden="true" on-click="FnDetailduereport">Due report<span class="fa arrow"></span></a>
+            <!-- <a href="" aria-hidden="true" on-click="FnDetailduereport">Due report<span class="fa arrow"></span></a> -->
             </li>
             <li id="dailycollectiondashboard">
             <a href="" aria-hidden="true" on-click="FnDailycollectionDashboard">Daily Collection Dashboard<span class="fa arrow"></span></a>
